# vfvm-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
benches/: benchmarks.rs
docs/: ghost_cell.md  tdse.md
examples/: capacitor.rs  nd_test.rs  particle.rs  stepping.rs
src/: lib.rs  main.rs
src/discretization/: generator.rs  mesh.rs  mod.rs
src/models/: mod.rs
src/models/pn/: mod.rs  pn.rs  semiconductor.rs
src/numerics/: mod.rs  solver.rs  sparse.rs  sparse_aramijo.rs  timing.rs  transient.rs
src/physics/: bc.rs  functional.rs  mod.rs  sparse.rs
src/processing/: csv_writer.rs  mod.rs  summary.rs
tests/: basic_verif.rs  bc_verif.rs
